# gscanner

./: .gitignore  README.md  lefthook.yml  pyproject.toml
examples/: calibrate.py  unfisheye.py
gscanner/: camera.py  config.py  gui.py  main.glade  main.py  utils.py
